# hyperbench

./: .gitignore  404.html  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  index.html  objects.inv  pyproject.toml  sitemap.xml  zensical.toml
.github/workflows/: ci.yaml  coverage.yaml  docs.yaml  issues.yaml  management.yaml  pull_requests.yaml  release.yaml
agents/: SKILLS.md
agents/references/: package.md  standard-lib.md  testing.md  type-system.md
assets/: data_design.excalidraw  deprecated_design.excalidraw
contributing/: index.html
docs/: index.md
docs/development/: ci.md  contribution.md  development.md  internals.md  makefile.md  policies.md
docs/getting-started/: installation.md  overview.md  package.md  tutorials.md
docs/release-notes/: release_notes.md
docs/site/: 404.html  index.html  objects.inv  search.json  sitemap.xml
docs/site/api/data/: index.html
docs/site/api/hlp/: index.html
docs/site/api/models/: index.html
docs/site/api/nn/: index.html
docs/site/api/reference/: index.html
docs/site/api/train/: index.html
docs/site/api/types/: index.html
docs/site/api/utils/: index.html
docs/site/contributing/: index.html
docs/site/getting-started/installation/: index.html
docs/site/stylesheets/: extra.css
docs/site/user-guide/user/: index.html
docs/user-guide/: models.md  user.md
examples/: early_stopping.py  external_dataset.py  gcn.py  hgnn.py  hgnnp.py  hnhn.py  hyperedge_enricher.py  hypergcn.py  mlp_common_neighbors.py  nhp.py  node2vecgcn.py  node2vecslp.py  node_enricher.py  villain.py
getting-started/installation/: index.html
hyperbench/data/: __init__.py  dataset.py  hif.py  loader.py  sampling.py  supported_datasets.py
hyperbench/hlp/: hgnn_hlp.py  hypergcn_hlp.py  mlp_hlp.py  nhp_hlp.py
hyperbench/models/: mlp.py  nhp.py  villain.py
hyperbench/nn/: __init__.py  aggregator.py  common.py  enricher.py
hyperbench/tests/data/: dataset_test.py  hif_test.py
hyperbench/tests/mock/: mock.py
hyperbench/tests/train/: negative_sampler_test.py
hyperbench/tests/types/: hdata_test.py
hyperbench/tests/utils/: file_utils_test.py  hif_utils_test.py  node_utils_test.py
hyperbench/train/: negative_sampler.py
hyperbench/types/: graph.py  hdata.py  hypergraph.py
hyperbench/utils/: __init__.py  data_utils.py  file_utils.py  hif_utils.py  node_utils.py
scripts/: validate_docstrings.py
search/: search_index.json
user-guide/user/: index.html
