[project]
name = "hyperbench"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastjsonschema==2.21.2",
    "huggingface-hub==1.11.0",
    "lightning==2.6.1",
    "numpy==2.2.6 ; python_full_version < '3.11'",
    "numpy==2.4.4 ; python_full_version >= '3.11'",
    "requests==2.33.1",
    "torch==2.11.0",
    "torch-cluster==1.6.3",
    "torch-geometric==2.7.0",
    "zstandard==0.25.0",
]

[project.optional-dependencies]
tensorboard = ["tensorboard==2.20.0"]

[tool.uv.sources]
torch-cluster = { index = "pyg-cpu" }

[[tool.uv.index]]
name = "pyg-cpu"
url = "https://data.pyg.org/whl/torch-2.11.0+cpu.html"
format = "flat"
explicit = true

[tool.setuptools.packages.find]
where = ["."]
include = ["hyperbench"]

[dependency-groups]
dev = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.6",
    "mkdocstrings[python]==1.0.4",
    "pre-commit==4.5.1",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "ruff==0.15.11",
    "ty==0.0.34",
]

[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--verbose",
    "--tb=short",
    "--strict-markers",
]
testpaths = ["hyperbench/tests"]
filterwarnings = [
    "ignore:.*torch.jit.script.*is not supported in Python 3.14.*",
    "ignore:`torch_geometric.distributed` has been deprecated",
    "ignore:.*isinstance.*LeafSpec.*is deprecated.*",
    "ignore:Sparse CSR tensor support is in beta state",
    "ignore:Sparse invariant checks are implicitly disabled",
]

[tool.coverage.run]
source = ["hyperbench"]
branch = true
omit = [
    "hyperbench/tests/*",
    "hyperbench/nn/*",
    "hyperbench/models/*",
    "hyperbench/hlp/*"
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
