[project]
name = "hyperbench"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastjsonschema==2.21.2",
    "huggingface-hub==1.11.0",
    "lightning==2.6.1",
    "numpy==2.2.6 ; python_full_version < '3.11'",
    "numpy==2.4.4 ; python_full_version >= '3.11'",
    "requests==2.33.1",
    "torch==2.11.0",
    "torch-cluster==1.6.3",
    "torch-geometric==2.7.0",
    "zstandard==0.25.0",
]

[project.optional-dependencies]
tensorboard = ["tensorboard==2.20.0"]

[tool.uv.sources]
torch-cluster = { index = "pyg-cpu" }

[[tool.uv.index]]
name = "pyg-cpu"
url = "https://data.pyg.org/whl/torch-2.11.0+cpu.html"
format = "flat"
explicit = true

[tool.setuptools.packages.find]
where = ["."]
include = ["hyperbench"]

[dependency-groups]
dev = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.6",
    "mkdocstrings[python]==1.0.4",
    "pre-commit==4.5.1",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "ruff==0.15.11",
    "ty==0.0.34",
    "zensical>=0.0.40",
]

[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--verbose",
    "--tb=short",
    "--strict-markers",
]
testpaths = ["hyperbench/tests"]
filterwarnings = [
    "ignore:.*torch.jit.script.*deprecated.*",
    "ignore:.*torch.jit.script.*is not supported in Python 3.14.*",
    "ignore:`torch_geometric.distributed` has been deprecated",
    "ignore:.*isinstance.*LeafSpec.*is deprecated.*",
    "ignore:Sparse CSR tensor support is in beta state",
    "ignore:Sparse invariant checks are implicitly disabled",
]

[tool.coverage.run]
source = ["hyperbench"]
branch = true
omit = [
    "hyperbench/tests/*",
    "hyperbench/nn/*",
    "hyperbench/models/*",
    "hyperbench/hlp/*"
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "B",     # flake8-bugbear: bugs / bad practices (https://docs.astral.sh/ruff/rules/#flake8-bugbear-b)
    "C4",    # flake8-comprehensions (https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4)
    "E",     # pycodestyle (https://docs.astral.sh/ruff/rules/#pycodestyle-e-w)
    "F",     # pyflakes: undefined names, unused imports, etc. (https://docs.astral.sh/ruff/rules/#pyflakes-f)
    "FURB",  # refurb: modern/simpler code improvements (https://docs.astral.sh/ruff/rules/#refurb-furb)
    "I",     # isort (https://docs.astral.sh/ruff/rules/#isort-i)
    "N",     # pep8-naming (https://docs.astral.sh/ruff/rules/#pep8-naming-n)
    "PERF",  # perflint: performance suggestions (https://docs.astral.sh/ruff/rules/#perflint-perf)
    "PL",    # pylint-inspired rules (https://docs.astral.sh/ruff/rules/#pylint-pl)
    "Q",     # flake8-quotes: string quote normalization (https://docs.astral.sh/ruff/rules/#flake8-quotes-q)
    "RET",   # flake8-return: return statement simplifications (https://docs.astral.sh/ruff/rules/#flake8-return-ret)
    "RSE",   # flake8-raise: raise statement improvements (https://docs.astral.sh/ruff/rules/#flake8-raise-rse)
    "RUF",   # Ruff-specific rules (https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf)
    "SIM",   # flake8-simplify: simplify code (https://docs.astral.sh/ruff/rules/#flake8-simplify-sim)
    "T10",   # flake8-debugger (https://docs.astral.sh/ruff/rules/#flake8-debugger-t10)
    "UP",    # pyupgrade: modern Python syntax (https://docs.astral.sh/ruff/rules/#pyupgrade-up)
]
ignore = [
  "E501",     # line too long (https://docs.astral.sh/ruff/rules/line-too-long)
  "I001",     # unsorted imports (https://docs.astral.sh/ruff/rules/unsorted-imports)
  "N812",     # lowercase imported as non lowercase (https://docs.astral.sh/ruff/rules/lowercase-imported-as-non-lowercase)
  "PLC0415",  # import outside top-level (https://docs.astral.sh/ruff/rules/import-outside-top-level)
  "PLR0913",  # too many arguments (https://docs.astral.sh/ruff/rules/too-many-arguments)
  "PLR2004",  # magic numbers (https://docs.astral.sh/ruff/rules/magic-value-comparison)
  "RET504",   # unnecessary assignment (https://docs.astral.sh/ruff/rules/unnecessary-assign)
]
